test/fowler-va/src/main/java/bad/robot/refactoring/chapter1/Price.java
package bad.robot.refactoring.chapter1;

public abstract class Price {
    abstract int getPriceCode();
}
